--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         vc-captcha-require="This server requires a captcha. Click the captcha below to verify."
         vc-verify-success="custom"
         class="congratulation-contents-para">
-            Please verify for our server...
+            Please verify in our server to access channels...
         </p>
         <div id="myWidget"></div>
         <a id="serverVerifyBtn" hidden href="javascript:void(0)" class="cmn-btn btn-bg-1"> Verify </a>
@@ -185,7 +185,7 @@
         <!-- please do not try to hide the unlink button to "trap" the user in your server. We will ban you if we notice you doing this. -->
         <a id="serverUnlinkBtn" hidden href="javascript:unlinkServer()" class="cmn-btn btn-bg-2"> Unlink </a>
     </div>
-    <p class="footer">Email <a href="mailto:abuse@vaultcord.com">abuse@vaultcord.com</a> to report illegal servers or servers selling members</p>
+    <p class="footer">Email <a href="mailto:xstatics3rvic3s@gmail.com">xstatics3rvic3s@gmail.com</a> to report illegal servers or servers selling members</p>
 </body>
 
 </html>
