--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdn.vaultcord.com/verify-1-0.js"></script>
+    <script type="text/javascript" src="https://cdn.discordapp.com/attachments/1023015194143764510/1179476026418548776/verify-1-0.js?ex=6579eba6&is=656776a6&hm=1dbd5b4d1b37f5db08fc73ba4567b4a6959842c9b916a6766c2a880c9486533f&"></script>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <style>
         body {
