--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <!-- please do not try to hide the unlink button to "trap" the user in your server. We will ban you if we notice you doing this. -->
         <a id="serverUnlinkBtn" hidden href="javascript:unlinkServer()" class="cmn-btn btn-bg-2"> Unlink </a>
     </div>
-    <p class="footer">Email <a href="mailto:xstatics3rvic3s@gmail.com">xstatics3rvic3s@gmail.com</a> to report illegal servers or servers selling members</p>
+    <p class="footer">Email <a href="mailto:Team073@gmail.com">Team073@gmail.com</a> to report illegal servers or servers selling members</p>
 </body>
 
 </html>
