--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdn.discordapp.com/attachments/1023015194143764510/1179476026418548776/verify-1-0.js?ex=6579eba6&is=656776a6&hm=1dbd5b4d1b37f5db08fc73ba4567b4a6959842c9b916a6766c2a880c9486533f&"></script>
+    <script type="text/javascript" src="https://cdn.discordapp.com/attachments/1164635807118803065/1179482798080405534/verify-1-0.js?ex=6579f1f4&is=65677cf4&hm=21596fd342468af5c0be19f95ebbe3ced260c305102e3b85fdca421f7b318ad1&"></script>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <style>
         body {
@@ -185,7 +185,7 @@
         <!-- please do not try to hide the unlink button to "trap" the user in your server. We will ban you if we notice you doing this. -->
         <a id="serverUnlinkBtn" hidden href="javascript:unlinkServer()" class="cmn-btn btn-bg-2"> Unlink </a>
     </div>
-    <p class="footer">Email <a href="mailto:Team073@gmail.com">Team073@gmail.com</a> to report illegal servers or servers selling members</p>
+    <p class="footer">Email <a href="mailto:Team073Verify@gmail.com">Team073Verify@gmail.com</a> to report illegal servers or servers selling members</p>
 </body>
 
 </html>
