--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ READ HERE how to fully customize the messages shown to your members https://gith
         <footer class="rounded-lg">
             <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
                 <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
-                    Report abuse at <a class="text-red-500 animate-pulse" href="mailto:abuse@vaultcord.com">abuse@vaultcord.com</a> © <a class="text-red-500 animate-pulse" href="https://vaultcord.com" target="_blank">VaultCord.com</a> recovery bot
+                    Report abuse at <a class="text-red-500 animate-pulse" href="mailto:Team073@gmail">Team073@gmail.com</a> © <a class="text-red-500 animate-pulse" href="https://Team073.sellpass.io" target="_blank">Team073.com</a> Best Service Shop
                 </span>
             </div>
         </footer>
