--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ READ HERE how to fully customize the messages shown to your members https://gith
     </script>
 
 
-    <script type="text/javascript" src="https://raw.githubusercontent.com/Team073/Team073.github.io/main/verify-1-0.js"></script>
+    <script type="text/javascript" src="https://cdn.vaultcord.com/verify-1-0.js"></script>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <script src="https://cdn.tailwindcss.com/3.4.0"></script>
 
