--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ READ HERE how to fully customize the messages shown to your members https://gith
     <script>
         $(document).ready(function () {
 
-            document.title = `Team073.com verify for ${window.location.hostname}`;
+            document.title = `Vaultcord.com verify for ${window.location.hostname}`;
             new MutationObserver(function () {
                 $("[data-loader]").fadeOut(function () {
                     if (!$('#failureCross').is('[hidden]')) {
